vpc.yaml
AWSTemplateFormatVersion: 2010-09-09
Description: VPC cloudformation code

Resources:
  ChetanaVPCTemplate:
    Type: AWS::EC2::VPC
    Properties: 
      CidrBlock: 10.0.0.0/16
      Tags: 
        - Key : Name 
          Value : ChetanaVPCTemplate


  Chetanapublicsubnet1: 
    Type: AWS::EC2::Subnet
    Properties: 
      CidrBlock:  10.0.1.0/24
      VpcId: !Ref ChetanaVPCTemplate
      Tags: 
        - Key: Name 
          Value: Public1
 

  Chetanapublicsubnet2: 
    Type: AWS::EC2::Subnet
    Properties: 
      CidrBlock:  10.0.2.0/24
      VpcId: !Ref ChetanaVPCTemplate
      Tags: 
        - Key: Name 
          Value: Public2

  
  Chetanaprivatesubnet1: 
    Type: AWS::EC2::Subnet
    Properties: 
      CidrBlock:  10.0.3.0/24
      VpcId: !Ref ChetanaVPCTemplate
      Tags: 
        - Key: Name 
          Value: Private1

  
  Chetanaprivatesubnet2: 
    Type: AWS::EC2::Subnet
    Properties: 
      CidrBlock:  10.0.4.0/24
      VpcId: !Ref ChetanaVPCTemplate
      Tags: 
        - Key: Name 
          Value: Private2



  ChetanaPublicRouteTable:
    Type: 'AWS::EC2::RouteTable'
    Properties:
      VpcId: !Ref ChetanaVPCTemplate


  MySubnetrouteassociation: 
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties: 
      RouteTableId: !Ref ChetanaPublicRouteTable
      SubnetId: !Ref Chetanapublicsubnet1


  MySubnetrouteassociation1: 
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties: 
      RouteTableId: !Ref ChetanaPublicRouteTable
      SubnetId: !Ref Chetanapublicsubnet2


  VPCInternetGateway:
    Type: 'AWS::EC2::InternetGateway'
      
  VPCGatewayattachment2: 
    Type: AWS::EC2::VPCGatewayAttachment
    Properties: 
      VpcId: !Ref ChetanaVPCTemplate
      InternetGatewayId: !Ref VPCInternetGateway


  PublicRoute: 
    Type : AWS::EC2::Route
    Properties:
      RouteTableId: !Ref ChetanaPublicRouteTable
      DestinationCidrBlock: 0.0.0.0/0
      GatewayId: !Ref VPCInternetGateway


  ChetanaPrivateRouteTable:
    Type: 'AWS::EC2::RouteTable'
    Properties:
      VpcId: !Ref ChetanaVPCTemplate

  PrivateRoute: 
    Type : AWS::EC2::Route
    Properties:
      RouteTableId: !Ref ChetanaPrivateRouteTable
      DestinationCidrBlock: 0.0.0.0/0
      NatGatewayId: !Ref ChetanaNatGateway


  MySubnetrouteassociation3: 
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties: 
      RouteTableId: !Ref ChetanaPrivateRouteTable
      SubnetId: !Ref Chetanaprivatesubnet1


  MySubnetrouteassociation4: 
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties: 
      RouteTableId: !Ref ChetanaPrivateRouteTable
      SubnetId: !Ref Chetanaprivatesubnet2


  ChetanaNatGateway:
    Type: AWS::EC2::NatGateway
    DependsOn: ElasticIP
    Properties: 
      SubnetId: !Ref Chetanapublicsubnet1
      AllocationId: !GetAtt ElasticIP.AllocationId
      Tags:
        - Key: Name
          Value: ch-natgateway

  ElasticIP:
    Type: AWS::EC2::EIP
    DependsOn: ChetanaVPCTemplate
    Properties:
      Domain: vpc




  publicnacl: 
    Type: AWS::EC2::NetworkAcl
    Properties:
      Tags: 
        - Key: Name
          Value: public-Nacl
      VpcId: !Ref ChetanaVPCTemplate   


  privatenacl: 
    Type: AWS::EC2::NetworkAcl
    Properties:
      Tags: 
        - Key: Name
          Value: private-Nacl
      VpcId: !Ref ChetanaVPCTemplate    


  Inboundnaclpublic:
    Type: AWS::EC2::NetworkAclEntry
    Properties:
      NetworkAclId: !Ref publicnacl
      RuleNumber: 100
      Protocol: 6 
      RuleAction: allow
      Egress: false
      CidrBlock: 0.0.0.0/0
      PortRange:
        From: 80
        To: 80

  outboundnaclpublic:
    Type: AWS::EC2::NetworkAclEntry
    Properties:
      NetworkAclId: !Ref publicnacl
      RuleNumber: 100
      Protocol: 6 
      RuleAction: allow
      Egress: true
      CidrBlock: 0.0.0.0/0
      PortRange:
        From: 80
        To: 80

  Inboundhttpsnaclpublic:
    Type: AWS::EC2::NetworkAclEntry
    Properties:
      NetworkAclId: !Ref publicnacl
      RuleNumber: 200
      Protocol: 6 
      RuleAction: allow
      Egress: false
      CidrBlock: 0.0.0.0/0
      PortRange:
        From: 443
        To: 443

  outboundhttpsnaclpublic:
    Type: AWS::EC2::NetworkAclEntry
    Properties:
      NetworkAclId: !Ref publicnacl
      RuleNumber: 200
      Protocol: 6 
      RuleAction: allow
      Egress: true
      CidrBlock: 0.0.0.0/0
      PortRange:
        From: 443
        To: 443


  NaclAssociation:
    Type: AWS::EC2::SubnetNetworkAclAssociation
    Properties:
      SubnetId: !Ref Chetanapublicsubnet1
      NetworkAclId: !Ref publicnacl

  NaclAssociation02:
    Type: AWS::EC2::SubnetNetworkAclAssociation
    Properties:
      SubnetId: !Ref Chetanapublicsubnet2
      NetworkAclId: !Ref publicnacl

  NaclAssociation:
    Type: AWS::EC2::SubnetNetworkAclAssociation
    Properties:
      SubnetId: !Ref Chetanaprivatesubnet1
      NetworkAclId: !Ref privatenacl

  NaclAssociation02:
    Type: AWS::EC2::SubnetNetworkAclAssociation
    Properties:
      SubnetId: !Ref Chetanaprivatesubnet2
      NetworkAclId: !Ref privatenacl
